--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,10 @@ body {
   width: 148px;
 }
 
+.calc-btn-row:nth-child(3) > .btn:nth-child(2) {
+  width: 148px;
+}
+
 #angkacalc {
   width: 90%;
 }
